--- a/apps/docs/content/docs/react/installation.mdx
+++ b/apps/docs/content/docs/react/installation.mdx
@@ -1,12 +1,11 @@
 ---
 title: Installation
-description: Learn how to install @stepperize/react library
+description: How to install and set up @stepperize/react in your project
 icon: Rocket
 ---
 
 
-You can install using [NPM](https://www.npmjs.com/), [Yarn](https://yarnpkg.com/en/docs/install),  [PNPM](https://pnpm.io/) or [Bun](https://bun.sh/).
-
+Choose your preferred package manager to install `@stepperize/react`:
 
 <Tabs groupId="tool" items={['npm', 'yarn', 'pnpm', 'bun']} defaultValue="npm">
   <Tab value="npm">
@@ -30,3 +29,8 @@ You can install using [NPM](https://www.npmjs.com/), [Yarn](https://yarnpkg.com/
   ```
   </Tab>
 </Tabs>
+
+## Next Steps
+
+- [API References](/docs/react/api-references/define)
+- [Examples](/docs/react/examples)
