--- a/apps/docs/content/docs/react/api-references/scoped.mdx
+++ b/apps/docs/content/docs/react/api-references/scoped.mdx
@@ -48,22 +48,10 @@ const StepNavigation = () => {
 
 ## API Reference
 
-<PropsTable
-  data={[
-    {
-      name: "initialStep",
-      type: "string",
-      typeSimple: "string",
-      description: "ID of the initial step to display.",
-    },
-    {
-      name: "children",
-      typeSimple: "React.ReactNode",
-      description: "Content to render inside the stepper.",
-      required: true,
-    },
-  ]}
-/>
+| Name | Type | Description | Required |
+| --- | --- | --- | --- |
+| initialStep | `string` | ID of the initial step to display. | No |
+| children | `React.ReactNode` | Content to render inside the stepper. | Yes |
 
 ## Nested Scopes
 
