--- a/apps/docs/content/docs/vue/index.mdx
+++ b/apps/docs/content/docs/vue/index.mdx
@@ -4,6 +4,45 @@ description: A powerful library for creating flexible Stepper components in Vue
 icon: Album
 ---
 
-<Callout type="warn">
-  Both the documents and the Vue package are not yet ready.
-</Callout>
+# Stepperize: Simplifying Multi-Step Processes in Vue
+
+Stepperize is a versatile Vue library designed to streamline the creation of Stepper components. It empowers developers to build complex, multi-step processes with ease, allowing them to focus on business logic rather than implementation details.
+
+## Key Features
+
+- **Flexible Step Management**: Create linear or branching flows
+- **Headless Component**: Full control over styling and UI
+- **React Native Compatible**: Build steppers for web and mobile apps
+- **Conditional Rendering**: Dynamically adjust content based on user input
+- **State Management**: Built-in tools for handling step state
+
+## Core Concepts
+
+### 1. Thinking in Steps
+
+Steppers break down complex workflows into manageable chunks, providing:
+
+- Clear navigation between steps
+- Visual progress indicators
+- Improved user experience for multi-stage processes
+
+#### Common Use Cases
+
+- User onboarding
+- Multi-page forms
+- E-commerce checkout
+- Product creation wizards
+- Tutorial walkthroughs
+- Surveys and questionnaires
+- Booking systems
+
+### 2. Thinking in Flows
+
+Stepperize goes beyond linear progressions, enabling:
+
+- Conditional rendering
+- Branching paths
+- Dynamic form adjustments
+- Personalized user experiences
+- State-dependent UI changes
+- Multi-path processes
